[project]
name = "llms-lab"
version = "0.1.0"
description = "Experiment lab for LLMs like DeepSeek-Math"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.42",
    "accelerate",
    "safetensors",
    "sentencepiece",
    "huggingface-hub>=0.34.4",
]

